# rfk

./: .gitignore  CHANGELOG.txt  LICENSE  Pipfile  README  README.md  build  dbf.py  openapi.yaml  requirements.txt  rfk_adapter.py  rfkadapter.py  setup.cfg  setup.py
harbour/: Dockerfile.base  Dockerfile.build  README.md  append.prg  build  build_base  build_docker  dbfadapter.prg  dbfreindex.prg  reindex.prg
src/mdbf/: __init__.py  mdbf.py
src/rfkadapter/: __init__.py  rfkadapter.py
tests/: test_rfkadapter.py
