[metadata]
name = rfkadapter
version = 0.1.0
author = Malik Koljenović
author_email = malik@mekom.ba
description = RFKAdapter emulira API nalik SQL jeziku (SELECT, UPDATE, CREATE) za DBF "baze podataka"
long_description = file: README 
long_description_content_type = text/markdown
url = https://gitea.lab.ba/mekom/rfk
project_urls =
	Bug Tracker = https://gitea.lab.ba/mekom/rfk/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
install_requires =
	aenum
python_requires = >=3.7

[options.packages.find]
where = src
